--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Gitの勉強</title>
 </head>
 <body>
+  <h1>Gitの勉強をしています。</h1>
+  p{この変更はadd-index-pageブランチで追加されました。}
   
 </body>
 </html>
