一段落追加

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Gitの勉強をしています。</h1>
-  p{この変更はadd-index-pageブランチで追加されました。}
+  <p>この変更はadd-index-pageブランチで追加されました。</p>
   
 </body>
 </html>
